On footer section of float position exercise

--- a/235/Tetris/tetris-start/css/styles.css
+++ b/235/Tetris/tetris-start/css/styles.css
@@ -1,5 +1,9 @@
 /* Do everything in this file */
-h2{border-bottom: 2px solid red;}
+h2
+{
+    clear: both;
+    border-bottom: 2px solid red;
+}
 figure
 {
     float: right;
@@ -11,4 +15,14 @@ figure img
 figure figcaption
 {
     margin-left: 35px;
+}
+.tet
+{
+    float: left;
+    width: 20rem;
+    border-left: 2px solid black;
+}
+footer
+{
+    clear: left;
 }
