--- a/235/Tetris/tetris-start/css/styles.css
+++ b/235/Tetris/tetris-start/css/styles.css
@@ -1,28 +1,50 @@
-/* Do everything in this file */
-h2
-{
-    clear: both;
-    border-bottom: 2px solid red;
-}
 figure
 {
-    float: right;
+    max-width: 650px;
+    margin-left: auto;
+    margin-right: auto;
 }
 figure img
 {
     width: 100%;
 }
-figure figcaption
+header, main, footer
 {
-    margin-left: 35px;
+    width: 90vw;
+}
+#tetlist
+{
+    display: flex;
+    flex-flow: row wrap;
 }
 .tet
 {
-    float: left;
-    width: 20rem;
-    border-left: 2px solid black;
+    flex: 1 1 450px;
+    border: 1px solid black;
+    text-align: center;
 }
-footer
+.tet img
 {
-    clear: left;
+    width: 60%;
+}
+span
+{
+    display: block;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    font-size: 24px;
+    font-weight: bold;
+}
+.aliases
+{
+    text-align: left;
+    margin: 1em;
+}
+.tet, .long img
+{
+    width: 80%;
+}
+.tet, .square img
+{
+    width: 40%;
 }
