--- a/235/project1/css/styles.css
+++ b/235/project1/css/styles.css
@@ -6,9 +6,24 @@ body
 .container
 {
     display: grid;
-    grid-template-areas: "Header Header Header"
-                         "Main   Main   Main"
-                         "Footer Footer Footer";
+    grid-template-areas: "Header"
+                         "Main"
+                         "Footer";
+}
+@media screen and (min-width: 480px)
+{
+    .container
+    {
+        display: grid;
+        grid-template-areas: "Header Header Header"
+                            "Main   Main   Main"
+                            "Footer Footer Footer";
+    }
+    #main #projects
+    {
+        display: grid;
+        grid-template-areas: "P1 P2 P3";
+    }
 }
 #header
 {
@@ -20,6 +35,12 @@ body
 {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+}
+#header img
+{
+    width: 25%;
+    height: 25%;
 }
 #main
 {
@@ -28,7 +49,9 @@ body
 #main #projects
 {
     display: grid;
-    grid-template-areas: "P1 P2 P3";
+    grid-template-areas: "P1"
+                         "P2"
+                         "P3";
 }
 #main #projects #project1
 {
@@ -51,10 +74,42 @@ body
     background-color: #A1D2CE;
     width: 100%;
 }
+#footer #footItems
+{
+    display: flex;
+    justify-content: space-around;
+}
+#footer #resume
+{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#footer #resume img
+{
+    width: 50%;
+}
 div 
 {
-    box-sizing: border-box;
-    border: 1px solid black;
-    padding: 20px;
     text-align: center;
+}
+a:link
+{
+    color: #373F47;
+}
+a:visited
+{
+    color: #DC851F;
+}
+a:focus
+{
+    color: #FFA737;
+}
+a:hover
+{
+    color: #FFA737;
+}
+a:active
+{
+    color: red;
 }
